Fix: goHome() now reloads the page

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1031,7 +1031,7 @@
 
             // --- Go Home (Logo Click) ---
             window.goHome = () => {
-                switchTab('channels');
+                location.reload();
             }
 
             // --- Filtering ---
