Rename StreamSports99 to StreamSports in title

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
-    <title>StreamSports99 - Premium Player</title>
+    <title>StreamSports - Premium Player</title>
     <!-- Hls.js -->
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <!-- Google Cast SDK -->
