UI: Change icon to TV with play button (sports streaming)

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -682,13 +682,11 @@
         <div class="brand" onclick="goHome()">
             <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                 stroke-linecap="round" stroke-linejoin="round">
-                <!-- Trophy Icon -->
-                <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
-                <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
-                <path d="M4 22h16"></path>
-                <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
-                <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
-                <path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"></path>
+                <!-- TV with Play Button (Sports Streaming) -->
+                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                <polygon points="10 8 16 11 10 14 10 8" fill="currentColor" stroke="none"></polygon>
+                <line x1="8" y1="21" x2="16" y2="21"></line>
+                <line x1="12" y1="17" x2="12" y2="21"></line>
             </svg>
             <span>StreamSports</span>
         </div>
