--- a/web/public/index.html
+++ b/web/public/index.html
@@ -113,7 +113,9 @@
 
         .search-box {
             position: relative;
-            width: 1000px;
+            width: 800px;
+            margin-left: 180px;
+            /* Align with sidebar end (sidebar=380px, brand=200px, so 380-200=180) */
         }
 
         .search-box input {
