UI: Flexible search box width with flex:1

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -113,9 +113,10 @@
 
         .search-box {
             position: relative;
-            width: 800px;
+            flex: 1;
             margin-left: 180px;
-            /* Align with sidebar end (sidebar=380px, brand=200px, so 380-200=180) */
+            /* Align with sidebar end */
+            max-width: 800px;
         }
 
         .search-box input {
