UI: Position search box with absolute left=380px to align with sidebar

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -112,11 +112,11 @@
         }
 
         .search-box {
-            position: relative;
-            flex: 1;
-            margin-left: 180px;
-            /* Align with sidebar end */
-            max-width: 800px;
+            position: absolute;
+            left: 380px;
+            /* Start at sidebar width */
+            right: 200px;
+            /* End before nav-tabs */
         }
 
         .search-box input {
