UI: Increase search box right margin to 280px to avoid overlap

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -118,8 +118,8 @@
             position: absolute;
             left: 380px;
             /* Start at sidebar width */
-            right: 200px;
-            /* End before nav-tabs */
+            right: 280px;
+            /* End before nav-tabs with margin */
         }
 
         .search-box input {
