--- a/web/public/index.html
+++ b/web/public/index.html
@@ -630,6 +630,13 @@
                 height: auto;
             }
 
+            #playerContainer {
+                order: -1;
+                position: sticky;
+                top: 0;
+                z-index: 100;
+            }
+
             .player-area {
                 width: 100%;
                 height: 250px;
@@ -638,8 +645,7 @@
                 position: sticky;
                 top: 0;
                 z-index: 100;
-                order: -1;
-                /* Ensure player is on top */
+                /* order: -1; moved to container */
             }
 
             .sidebar {
