--- a/web/public/index.html
+++ b/web/public/index.html
@@ -446,12 +446,20 @@
             align-items: center;
             justify-content: center;
             box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.8);
+            min-width: 0;
+            /* Critical for flex child */
+            overflow: hidden;
+            /* Prevent spill */
         }
 
         video {
             width: 100%;
             height: 100%;
             max-height: 100vh;
+            object-fit: contain;
+            /* Ensure video fits box */
+            display: block;
+            /* Remove inline gap */
         }
 
         .placeholder-content {
@@ -737,7 +745,8 @@
 
         </div>
 
-        <div id="playerContainer" class="player-container" style="display: flex; flex-direction: column; flex: 1;">
+        <div id="playerContainer" class="player-container"
+            style="display: flex; flex-direction: column; flex: 1; min-width: 0; overflow: hidden;">
             <!-- Server List Header -->
             <div id="serverListContainer" class="server-list-container">
                 <span class="server-label">Servers:</span>
